upadated HTML page

--- a/Color changes/index.html
+++ b/Color changes/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <p class="sambit">Sambit</p>
+      <p class="sambit">Background Changer</p>
       >
     </nav>
     <div class="canvas">
