--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>BMI Calculator</title>
   </head>
   <body>
@@ -15,13 +15,13 @@
     <div class="container">
       <h1>BMI Calculator</h1>
       <form id="bmiform">
-        <p>  
-            <label for="height">Height in CM: </label>
-            <input type="text" id="height"/>
+        <p>
+          <label for="height">Height in CM: </label>
+          <input type="text" id="height" />
         </p>
         <p>
-            <label for="weight">Weight in KG: </label>
-            <input type="text" id="weight"/>
+          <label for="weight">Weight in KG: </label>
+          <input type="text" id="weight" />
         </p>
         <button type="submit">Calculate</button>
         <div id="results"></div>
@@ -34,5 +34,5 @@
       </form>
     </div>
   </body>
-  <script src="color.js"></script>
+  <script src="style1.js"></script>
 </html>
